--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,12 @@
 version: 2.1
 
 executors:
-  node:
+  node-executor:
     working_directory: ~/some-dir
     docker:
       - image: circleci/node:12.0-browsers
 
 commands:
-  say-hi:
-    description: Greeting is important
-    steps:
-      - run: echo "What's up duck?"
-  print-some-var:
-    steps:
-      - run: echo $SOME_VAR
-  set-some-var:
-    parameters:
-      value:
-        type: string
-        default: "false"
-    steps:
-      - run: SOME_VAR="<< parameters.value >>"
   print-tags:
     steps:
       - run: git tag -l
@@ -34,16 +20,37 @@ commands:
             else
                 echo "nope"
             fi
+  version-update:
+    parameters:
+      semver:
+        type: enum
+        enum: ["major", "minor", "patch"]
+    steps:
+      - run:
+          command: |
+            pwd
+            npm version << parameters.semver >>
+            git push
 
 jobs:
-  some-job:
-    executor: node
+  npm-version-bump:
+    executor: node-executor
     steps:
       - checkout
       - print-tags
       - check-version-tag
 
+  git-version-update:
+    executor: node-executor
+    steps:
+      - checkout
+      - version-update:
+          semver: patch
+
 workflows:
-  some-workflow:
+  versioning:
     jobs:
-      - some-job
+      - git-version-update:
+          filters:
+            tags:
+              ignore: /^v?((([0-9]+)\.([0-9]+)\.([0-9]+)(-([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)$/
