--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,15 @@ commands:
       - run:
           command: |
             pwd
+            git config user.email "$GIT_USER_EMAIL"
+            git config user.name "$GIT_USER_NAME"
             npm version << parameters.semver >>
+      - run:
+          command: |
+            echo "$GIT_USER_EMAIL"
+            echo "GIT_USER_NAME"
+      - run:
+          command: |
             git push
 
 jobs:
@@ -54,3 +62,4 @@ workflows:
           filters:
             tags:
               ignore: /^v?((([0-9]+)\.([0-9]+)\.([0-9]+)(-([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)$/
+          context: yucho-open-source
