--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,13 +54,13 @@ jobs:
       - checkout
       - run:
           command: |
-            # Due to limitation in Circle CI, we need this job to filter out versioned commit
+            # Due to limitation of Circle CI tags filters, we need this job to filter out versioned commit
             IS_VALID_SEMVER="^v?((([0-9]+)\.([0-9]+)\.([0-9]+)(-([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)$"
             if [[ $(git tag --contains HEAD) =~ $(echo $IS_VALID_SEMVER) ]]; then
               # Error out to prevent downstream jobs from running
                 exit 1
             else
-                exit 0
+                exit 1
             fi
 
   npm-version-bump:
@@ -91,11 +91,6 @@ jobs:
       - version-bump:
           semver: major
           push-url: github.com/yucho/circleci-playground.git
-  what-the-fuck:
-    executor: node-executor
-    steps:
-      - run:
-          command: echo what the fuck
 
 workflows:
   versioning:
@@ -104,8 +99,6 @@ workflows:
           filters:
             branches:
               only: master
-            tags:
-              only: /.*/
       - patch-version-bump:
           context: yucho-open-source
           type: approval
@@ -121,14 +114,6 @@ workflows:
           type: approval
           requires:
             - filter-master
-      - what-the-fuck:
-          requires:
-            - filter-master
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /.*/
 
   i-should-not-run-after-approval:
     jobs:
