Add branches filters to run-deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,3 +115,6 @@ workflows:
           context: yucho-open-source
           requires:
             - deploy
+          filters:
+            branches:
+              only: master
