--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,4 +117,6 @@ workflows:
             - deploy
           filters:
             branches:
-              only: master
+              ignore: /.*/
+            tags:
+              only: /^v?((([0-9]+)\.([0-9]+)\.([0-9]+)(-([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)$/
