--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ executors:
       - image: circleci/node:12.0-browsers
 
 commands:
+  git-set-config:
+    steps:
+      - run:
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "$GIT_USER_EMAIL"
+            git config user.name "$GIT_USER_NAME"
+
   version-bump:
     parameters:
       semver:
@@ -19,11 +27,9 @@ commands:
         type: string
         default: github.com/yucho/circleci-playground.git
     steps:
+      - git-set-config
       - run:
           command: |
-            git config credential.helper 'cache --timeout=120'
-            git config user.email "$GIT_USER_EMAIL"
-            git config user.name "$GIT_USER_NAME"
             npm version << parameters.semver >>
 
             # Push quietly to prevent displaying token in shell
@@ -42,11 +48,6 @@ jobs:
               # Error out to prevent downstream jobs from running
                 exit 1
             fi
-  check-tag:
-    executor: node-executor
-    steps:
-      - run:
-          command: echo do nothing
 
   run-patch-version-bump:
     executor: node-executor
@@ -82,19 +83,10 @@ workflows:
           filters:
             branches:
               only: master
-      - check-tag:
-          type: approval
-          requires:
-            - filter-master
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              ignore: /^v?((([0-9]+)\.([0-9]+)\.([0-9]+)(-([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)(\+([0-9a-zA-Z-]+(\.[0-9a-zA-Z-]+)*))?)$/
       - patch-version-bump:
           type: approval
           requires:
-            - check-tag
+            - filter-master
       - run-patch-version-bump:
           context: yucho-open-source
           requires:
@@ -102,7 +94,7 @@ workflows:
       - minor-version-bump:
           type: approval
           requires:
-            - check-tag
+            - filter-master
       - run-minor-version-bump:
           context: yucho-open-source
           requires:
@@ -110,7 +102,7 @@ workflows:
       - major-version-bump:
           type: approval
           requires:
-            - check-tag
+            - filter-master
       - run-major-version-bump:
           context: yucho-open-source
           requires:
